# aeolus

./: .env.example  .gitignore  AI.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  DEMO_OPENAQ_README.md  DEMO_README.md  README.md  REFERENCES.md  ROADMAP.md  STEP6_SUMMARY.md  STEP7_SUMMARY.md  demo.py  demo_openaq.py  example.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: contributing.md  index.md
docs/api/: aeolus.md  index.md  metrics.md  networks.md  portals.md
docs/dev/: potential_data_sources.md  user_stories_v040.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: downloading.md  metrics.md  overview.md  ratification.md  sources.md  visualization.md
docs/sources/: airnow.md  airqo.md  breathe-london.md  openaq.md  purpleair.md  sensor-community.md  uk-networks.md
src/aeolus/: __init__.py  api.py  database_operations.py  decorators.py  downloader.py  meteorology.py  registry.py  transforms.py  types.py
src/aeolus/metrics/: SOURCES.md  __init__.py  base.py
src/aeolus/metrics/indices/: __init__.py  china.py  eu_caqi.py  india_naqi.py  uk_daqi.py  us_epa.py  who.py
src/aeolus/networks/: __init__.py  api.py
src/aeolus/portals/: __init__.py  api.py
src/aeolus/sources/: __init__.py  airnow.py  airqo.py  breathe_london.py  openaq.py  purpleair.py  regulatory.py  sensor_community.py
src/aeolus/viz/: __init__.py  plots.py  prepare.py  theme.py
src/aeolus_aq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: PHASE1_SUMMARY.md  README.md  conftest.py  stress_test.py  test_airnow.py  test_airqo.py  test_api.py  test_breathe_london.py  test_metrics.py  test_networks_portals_api.py  test_openaq.py  test_openaq_fetcher.py  test_openaq_normalizer.py  test_purpleair.py  test_registry.py  test_regulatory.py  test_sensor_community.py  test_transforms.py  test_viz.py
tests/fixtures/: README.md  download_test_data.py  example_usage.py
