[project]
name = "aeolus_aq"
version = "0.3.0rc2"
authors = [
  { name="Ruaraidh Dobson", email="ruaraidh.dobson@gmail.com" },
]
description = """This module provides functions for downloading metadata and data files from
air quality networks and standardising them into a common pandas DataFrame format."""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openaq>=0.7.0",
    "pandas>=2.3.3",
    "rdata>=0.11",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "tenacity>=8.2.0",
    "matplotlib>=3.7.0",
    "purpleair-api>=1.3.1",
    "python-dotenv>=1.2.1",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/southlondonscientific/aeolus"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "responses>=0.23.0",
    "freezegun>=1.2.2",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=aeolus",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that need API keys",
    "live: marks tests that hit real APIs",
]
